kubernetes/apps/default/immich/app/server/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: sh-immich.svg
    gethomepage.dev/name: Immich
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=immich
    gethomepage.dev/widget.type: "immich"
    gethomepage.dev/widget.url: "http://immich-server.default.svc:2283"
    gethomepage.dev/widget.key: ${SECRET_HOMEPAGE_VAR_IMMICH_API_TOKEN}
    gethomepage.dev/widget.version: "2"
spec:
  hostnames:
    - "photos.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
